--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,7 @@ dmypy.json
 
 rules_engine/web_server/static/
 rules_engine/docker.env
+backend/engine/db_password.txt
+backend/engine/db_root_password.txt
+backend/engine/docker.env
+backend/engine/wildfly_configuration.txt
