Add Integration Tests *Docker Changes -    1. Removed container name as TestContainers cannot find such containers.    2. Marked the mail-data volume as externally managed so that its not recreated every time the integration tests are run.    3. Modified the bash scripts so that command line interpreter does not interpolate user names and passwords with special characters (namely, $ ' & =). Additionaly, handled writing & to the WildFly configuration file.    4. Modified the WildFly configuration to support application logging without using per-deployment settings and opened the server to accept connections from the outside world. *Maven Changes -    1. Added TestContainers and removed per-deployment logging settings.    2. Added logback-test.xml to control the verbosity of TestContainers logging. *Application Changes -    1. Adjusted logging messages and levels and ensured Logger has the correct lifecycle per class.    2. Corrected javadoc issues.    3. Converted Criterion so that each one is reset at beginning of an engine run rather than (incompletly) creating new copies.    4. Removed extraneous criteria check in Rule due to criteria repository validations.    5. Added empty constructors to data objects to satisfy Java EE requirements.

--- a/backend/engine/docker-compose-test.yml
+++ b/backend/engine/docker-compose-test.yml
@@ -24,14 +24,16 @@ services:
       - 9443:9443
     volumes:
       - mail-data:/axigen/var
-  backend:
+  backend_service:
     build: .
-    container_name: backend_service
     depends_on:
       - db
       - email
     env_file:
       - docker.env
+    ports:
+      - 8080:8080
+      - 9990:9990
     secrets:
       - db_password
       - db_user
@@ -46,3 +48,4 @@ secrets:
 
 volumes:
   mail-data:
+    external: true
