Containerize Rules Tests *Add TestContianers for MySQL and Selenium *Add Python virtual environment to ensure proper packages are installed.

--- a/rules_engine/.dockerignore
+++ b/rules_engine/.dockerignore
@@ -3,8 +3,14 @@
 /rules/static
 /rules/tests
 /Dockerfile
+/.coverage
 /.dockerignore
+/.venv
 /*.env
 /*.conf
 /*.yml
+/geckodriver.log
 /htmlcov
+/runtests.py
+/runtests.sh
+/test_requirements.txt
