--- a/rules_engine/requirements.txt
+++ b/rules_engine/requirements.txt
@@ -1,8 +1,5 @@
-asgiref==3.7.2
 Django==5.0.4
 gunicorn==22.0.0
-protobuf==4.25.3
-python-dotenv==1.0.1
-requests=2.31.0
-sqlparse==0.5.0
 mysqlclient==2.2.4
+python-dotenv==1.0.1
+Requests==2.31.0
