Improve Django Docker Container *Update the list of files and directories not to copy into the image. *Move the contents in docker.env into the Docker secrets system. *Increase image security by running it with an unprivileged user.

--- a/rules_engine/Dockerfile
+++ b/rules_engine/Dockerfile
@@ -7,12 +7,16 @@ WORKDIR /app
 RUN apt-get update -y \
     && apt-get install -y python3-dev default-libmysqlclient-dev build-essential pkg-config
 RUN pip3 install --upgrade pip
-COPY requirements.txt requirements.txt
-RUN pip3 install -r requirements.txt
-
 COPY . .
+RUN pip3 install -r requirements.txt
+RUN rm -f /app/requirements.txt
+
+RUN groupadd -r django && useradd -r -g django django
+RUN chown -R django:django /app
 
 EXPOSE 7000
+
+USER django
 
 ENTRYPOINT [ "/app/initialize.sh" ]
 
