--- a/rules_engine/.dockerignore
+++ b/rules_engine/.dockerignore
@@ -2,6 +2,8 @@
 /rules/migrations
 /rules/static
 /rules/tests
+/__pycache__
+/build.sh
 /Dockerfile
 /.coverage
 /.dockerignore
@@ -13,4 +15,11 @@
 /htmlcov
 /runtests.py
 /runtests.sh
+/secret-engine_host.txt
+/secret-engine_reload_key.txt
+/secret-mysql_host.txt
+/secret-mysql_password.txt
+/secret-mysql_user.txt
+/secret-secret_key.txt
 /test_requirements.txt
+/web_server
