--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,9 @@ backend/engine/db_password.txt
 backend/engine/db_root_password.txt
 backend/engine/docker.env
 backend/engine/wildfly_configuration.txt
+rules_engine/secret-engine_host.txt
+rules_engine/secret-engine_reload_key.txt
+rules_engine/secret-mysql_host.txt
+rules_engine/secret-mysql_password.txt
+rules_engine/secret-mysql_user.txt
+rules_engine/secret-secret_key.txt
