Add Logging *The Docker container log file is stored in a Docker volume. *In the Docker container, messages are output to the console and the /app/log/rules_engine.log file. Outside of the Docker container, messages are output to the console. Differentiation is determined by the running_in_docker environment variable. *The logging level defaults to INFO, but can be adjusted with the environment variable logging_level.
Miscellaneous Issues
*Correct type hints throughout forms.py and views.py.

--- a/rules_engine/docker-compose-service.yml
+++ b/rules_engine/docker-compose-service.yml
@@ -3,6 +3,8 @@ services:
     build:
       context: .
     container_name: django_service
+    volumes:
+      - django_logs:/app/log
     secrets:
       - engine_host
       - engine_reload_key
@@ -31,3 +33,6 @@ secrets:
     file: secret-mysql_password.txt
   secret_key:
     file: secret-secret_key.txt
+
+volumes:
+  django_logs:
