Consolidate Docker Secrets *Move all secret files into the top-level secrets folder.

--- a/backend/engine/Dockerfile
+++ b/backend/engine/Dockerfile
@@ -12,25 +12,25 @@ RUN apt-get update -y \
 
 RUN unzip *
 
-RUN --mount=type=bind,source=pom.xml,target=pom.xml \
+RUN --mount=type=bind,source=backend/engine/pom.xml,target=pom.xml \
     --mount=type=cache,target=/root/.m2 \
     mvn dependency:go-offline -DskipTests
 
-COPY wildfly_configure.sh /build/
+COPY backend/engine/wildfly_configure.sh /build/
 
-RUN --mount=type=bind,source=db_user.txt,target=db_user.txt \
-    --mount=type=bind,source=db_password.txt,target=db_password.txt \
-    --mount=type=bind,source=wildfly_configuration.txt,target=wildfly_configuration.txt \
-    --mount=type=bind,source=standalone.xml.tmpl,target=standalone.xml.tmpl \
+RUN --mount=type=bind,source=secrets/db_user_name.txt,target=db_user.txt \
+    --mount=type=bind,source=secrets/db_user_password.txt,target=db_password.txt \
+    --mount=type=bind,source=backend/engine/wildfly_configuration.txt,target=wildfly_configuration.txt \
+    --mount=type=bind,source=backend/engine/standalone.xml.tmpl,target=standalone.xml.tmpl \
     /build/wildfly_configure.sh
 
 FROM deps as package
 
 WORKDIR /build
 
-COPY ./src src
+COPY backend/engine/src src
 
-RUN --mount=type=bind,source=pom.xml,target=pom.xml \
+RUN --mount=type=bind,source=backend/engine/pom.xml,target=pom.xml \
     --mount=type=cache,target=/root/.m2 \
     mvn --offline package -DskipTests
 
@@ -39,7 +39,7 @@ FROM bitnami/wildfly:31.0.1 as final
 COPY --from=deps /build/mysql-connector-j-8.3.0/mysql-connector-j-8.3.0.jar /app/
 COPY --from=deps /build/standalone.xml /opt/bitnami/wildfly/standalone/configuration/
 COPY --from=package /build/target/engine-1.0-SNAPSHOT.war /app/
-COPY initialize.sh /build/
+COPY backend/engine/initialize.sh /build/
 
 USER root
 
