--- a/backend/engine/docker-compose-test.yml
+++ b/backend/engine/docker-compose-test.yml
@@ -10,12 +10,12 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD_FILE: /run/secrets/db_root_password
       MYSQL_DATABASE: rules
-      MYSQL_USER_FILE: /run/secrets/db_user
-      MYSQL_PASSWORD_FILE: /run/secrets/db_password
+      MYSQL_USER_FILE: /run/secrets/db_user_name
+      MYSQL_PASSWORD_FILE: /run/secrets/db_user_password
     secrets:
       - db_root_password
-      - db_password
-      - db_user
+      - db_user_password
+      - db_user_name
   email:
     image: axigen/axigen:latest
     container_name: email_service
@@ -25,7 +25,9 @@ services:
     volumes:
       - mail-data:/axigen/var
   backend_service:
-    build: .
+    build:
+      context: ../../
+      dockerfile: backend/engine/Dockerfile
     depends_on:
       - db
       - email
@@ -35,16 +37,16 @@ services:
       - 8080:8080
       - 9990:9990
     secrets:
-      - db_password
-      - db_user
+      - db_user_password
+      - db_user_name
 
 secrets:
-  db_password:
-    file: db_password.txt
+  db_user_password:
+    file: ../../secrets/db_user_password.txt
   db_root_password:
-    file: db_root_password.txt
-  db_user:
-    file: db_user.txt
+    file: ../../secrets/db_root_password.txt
+  db_user_name:
+    file: ../../secrets/db_user_name.txt
 
 volumes:
   mail-data:
