--- a/docker-compose-supporting_services.yml
+++ b/docker-compose-supporting_services.yml
@@ -9,14 +9,14 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD_FILE: /run/secrets/db_root_password
       MYSQL_DATABASE: rules
-      MYSQL_USER_FILE: /run/secrets/db_user
-      MYSQL_PASSWORD_FILE: /run/secrets/db_password
+      MYSQL_USER_FILE: /run/secrets/db_user_name
+      MYSQL_PASSWORD_FILE: /run/secrets/db_user_password
     ports:
       - 3306:3306
     secrets:
       - db_root_password
-      - db_password
-      - db_user
+      - db_user_password
+      - db_user_name
   email:
     image: axigen/axigen:latest
     container_name: email_service
@@ -29,12 +29,12 @@ services:
       - mail-data:/axigen/var
 
 secrets:
-  db_password:
-    file: backend/engine/db_password.txt
+  db_user_password:
+    file: secrets/db_user_password.txt
   db_root_password:
-    file: backend/engine/db_root_password.txt
-  db_user:
-    file: backend/engine/db_user.txt
+    file: secrets/db_root_password.txt
+  db_user_name:
+    file: secrets/db_user_name.txt
 
 volumes:
   database_service_data:
