Backend Docker Overhaul *Replace Axigen email server with GreenMail. *Add Docker secrets for email container connection, add secret for database server port, and convert engine reload key into a Docker secret. *Place all Docker containers on the same Docker network. *Add _test to container names in the backend integration test's compose file to prevent name clashes with non-test containers. *Modified the backend Dockerfile to (1) use the official WildFly image, (2) move the server configuration and database connection check into the WildFly Configure Java Utility, (3) use the WildFly Maven plugin to create the server, (4) use a YAML file to configure the server after the container has started (rather than store secrets in the image), and (5) use JDK 21 now that it is available in the Maven image. *Cleaned up the pom to (1) not warn about java agent use during testing due to Mockito's use of Byte Buddy, (2) upgrade all dependencies and plugins to latest version, and (3) copy WildFly Configure Java Utility from local Maven repository for use in building the backend Docker image.

--- a/.gitignore
+++ b/.gitignore
@@ -131,12 +131,4 @@ dmypy.json
 .vscode/settings.json
 
 frontend/web_server/static/
-backend/engine/docker.env
-backend/engine/wildfly_configuration.txt
-secrets/db_host.txt
-secrets/db_root_password.txt
-secrets/db_user_name.txt
-secrets/db_user_password.txt
-secrets/django_secret_key.txt
-secrets/engine_host.txt
-secrets/engine_reload_key.txt
+backend/engine/wildfly-configuration-1.0.jar
