--- a/backend/engine/docker-compose-service.yml
+++ b/backend/engine/docker-compose-service.yml
@@ -4,17 +4,42 @@ services:
       context: ../../
       dockerfile: backend/engine/Dockerfile
     container_name: engine_service
-    env_file:
-      - docker.env
+    networks:
+      - rules_engine
     ports:
       - 8080:8080
       - 9990:9990
     secrets:
+      - db_host
+      - db_host_port
       - db_user_password
       - db_user_name
+      - engine_reload_key
+      - mail_from_address
+      - mail_host_port
+      - mail_host
+      - mail_server_password
+
+networks:
+  rules_engine:
+    external: true
 
 secrets:
+  db_host:
+    file: ../../secrets/db_host.txt
+  db_host_port:
+    file: ../../secrets/db_host_port.txt
   db_user_password:
     file: ../../secrets/db_user_password.txt
   db_user_name:
     file: ../../secrets/db_user_name.txt
+  engine_reload_key:
+    file: ../../secrets/engine_reload_key.txt
+  mail_from_address:
+    file: ../../secrets/mail_from_address.txt
+  mail_host_port:
+    file: ../../secrets/mail_host_port.txt
+  mail_host:
+    file: ../../secrets/mail_host.txt
+  mail_server_password:
+    file: ../../secrets/mail_server_password.txt
