--- a/backend/engine/docker-compose-service.yml
+++ b/backend/engine/docker-compose-service.yml
@@ -19,6 +19,8 @@ services:
       - mail_host_port
       - mail_host
       - mail_server_password
+      - wildfly_user_name
+      - wildfly_user_password
 
 networks:
   rules_engine:
@@ -43,3 +45,7 @@ secrets:
     file: ../../secrets/mail_host.txt
   mail_server_password:
     file: ../../secrets/mail_server_password.txt
+  wildfly_user_name:
+    file: ../../secrets/wildfly_user_name.txt
+  wildfly_user_password:
+    file: ../../secrets/wildfly_user_password.txt
