--- a/frontend/docker-compose-service.yml
+++ b/frontend/docker-compose-service.yml
@@ -15,6 +15,9 @@ services:
       - db_user_name
       - db_user_password
       - django_secret_key
+      - django_super_user_email
+      - django_super_user_name
+      - django_super_user_password
 
   nginx:
     build:
@@ -37,13 +40,19 @@ secrets:
   db_host:
     file: ../secrets/db_host.txt
   db_host_port:
-    file: ../../secrets/db_host_port.txt
+    file: ../secrets/db_host_port.txt
   db_user_name:
     file: ../secrets/db_user_name.txt
   db_user_password:
     file: ../secrets/db_user_password.txt
   django_secret_key:
     file: ../secrets/django_secret_key.txt
+  django_super_user_email:
+    file: ../secrets/django_super_user_email.txt
+  django_super_user_name:
+    file: ../secrets/django_super_user_name.txt
+  django_super_user_password:
+    file: ../secrets/django_super_user_password.txt
 
 volumes:
   django_logs:
