--- a/backend/engine/pom.xml
+++ b/backend/engine/pom.xml
@@ -8,7 +8,7 @@
   <groupId>io.github.robert_f_ruff</groupId>
   <artifactId>rules-engine</artifactId>
   <packaging>war</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <name>Rules Engine</name>
   <url>https://robert-f-ruff.github.io</url>
