Bug Stomp * 'container_name' property in Compose files is no longer supported by Testcontainers; the property is removed. * Update WildFly Configuration and MySQL Connector/J  to the latest version (.gitignore, Dockerfile, and initialize.sh). * Argument of type "int" cannot be assigned to parameter "value" of type "str" pylint issue; converted the return value to a string using the str function (runtests.py).

--- a/.gitignore
+++ b/.gitignore
@@ -131,4 +131,4 @@ dmypy.json
 .vscode/settings.json
 
 frontend/web_server/static/
-backend/engine/wildfly-configuration-1.0.jar
+backend/engine/wildfly-configuration-*.jar
