Bug Stomp * tc.docker - #5 WARN: FromAsCasing: 'as' and 'FROM' keywords' casing do not match; capitalized the as keyword  (Dockerfile). * Upgraded dependencies to latest version (pom.xml). * Replaced -javaagent value in maven-surefire-plugin per Mockito documentation (pom.xml). * Completed update of WildFly Configuration (pom.xml). * Replaced outdated usage of the org.junit.Assert package with the org.junit.jupiter.api.Assertions package (SendEmail_Test.java, EngineRequest_Test.java, EngineResponse_Test.java).

--- a/backend/engine/Dockerfile
+++ b/backend/engine/Dockerfile
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 
-FROM ubuntu:latest as deps
+FROM ubuntu:latest AS deps
 
 WORKDIR /build
 
@@ -11,7 +11,7 @@ RUN apt-get update -y \
 
 RUN unzip *
 
-FROM quay.io/wildfly/wildfly-runtime:latest-jdk21 as final
+FROM quay.io/wildfly/wildfly-runtime:latest-jdk21 AS final
 COPY --chown=jboss:root backend/engine/target/server/ $JBOSS_HOME
 RUN chmod -R ug+rwX $JBOSS_HOME
 
